@@ -1,4 +1,5 @@
 current:
+  * add missing files for Interleaved 2 of 5
   * add support for Interleaved 2 of 5 symbology!
     - again no check digit option yet
   * increase decode window from 8 to 16 bars
